Mini Project with GIN FrameWork, pgxpool and swagger--> Sales_Billing optimised
